--- a/style.css
+++ b/style.css
@@ -21,8 +21,6 @@ li{
   margin: 1rem 0 0 70rem;
   cursor: pointer;
   width: 55px;
-  /* z-index: 3; */
-  /* background-color: #ccc; */
   border-radius: 25px;
   height: 7px;
   transition-duration: 0.25s;
@@ -57,29 +55,15 @@ li{
   .menu{
     margin-left: 45rem;
   }
+  .body{
+    text-align: center;
+  }
 }
 @media (max-width:800px){
   .menu{
     margin-left: 30rem;
   }
 }
-/* .nav-list::before,
-.nav-list::after{
-content: "";
-background-color: #222;
-position: absolute;
-top:0;
-height: 100vh;
-width: 0vw;
-transition: all 0.1s ease-in-out 0.3s;
-z-index: 2;
-} */
-/* .nav-list::before{
-  left: 0;
-}
-.nav-list::after{
-  left: 0;
-} */
 ul{
   font-size: 3rem;
   position: absolute;
@@ -90,17 +74,13 @@ ul{
   transition-timing-function: ease-in-out;
   z-index: 1;
 }
-/* .check::before,
-.check::after{
-  width:25vw;
-} */
+
 .check{
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%,-50%);
-  /* transition: 1s cubic-bezier(0.1,0.2,0.31.4) , .55s; */
-  /* z-index: 1; */
+
 }
 .blur{
   filter: blur(7px);
@@ -108,4 +88,5 @@ ul{
 a.active{
   opacity: 1;
 }
+
 
